# cortanex-ai-meetings

./: .env.example  .gitignore  README.md  compose.ip.env.example  compose.local.env  docker-compose.yml
docs/: branding.md  deployment.md  react-backend-integration.md
integration/react/: CortanexJitsiMeeting.tsx  README.md
rag-system/: .env.example  README.md  docker-compose.yml
rag-system/infra/grafana/provisioning/dashboards/: dashboards.yml
rag-system/infra/nginx/: nginx.conf
rag-system/infra/prometheus/: prometheus.yml
rag-system/scripts/: backup-postgres.sh  generate-secrets.sh  smoke-test.sh
rag-system/services/rag/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
rag-system/services/rag/src/rag/: api.py  chunking.py  clients.py  config.py  db.py  extractors.py  models.py  prompts.py  qdrant_store.py  queue.py  schemas.py  security.py  storage.py  worker.py
rag-system/services/rag/src/rag/alembic/: env.py
rag-system/services/rag/src/rag/alembic/versions/: 202607050001_initial_schema.py
rag-system/services/rag/tests/: test_chunking.py  test_prompts.py  test_qdrant_filters.py
rag-system/services/retrieval/: Dockerfile  pyproject.toml
rag-system/services/retrieval/src/retrieval_service/: main.py
scripts/: bootstrap-env.sh
services/test-frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
services/test-frontend/src/: main.tsx  styles.css
services/token-service/: Dockerfile  package.json
services/token-service/src/: server.js
services/token-service/test/: token.test.js
web/: Dockerfile
web/branding/: custom-config.js  custom-interface_config.js
web/rootfs/usr/share/jitsi-meet/: manifest.json  title.html
web/rootfs/usr/share/jitsi-meet/css/: cortanex.css
