[project]
name = "mohkam-rag-service"
version = "0.1.0"
description = "Production-oriented RAG API and worker services"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "beautifulsoup4>=4.12,<5.0",
  "boto3>=1.35,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "lxml>=5.3,<6.0",
  "openpyxl>=3.1,<4.0",
  "orjson>=3.10,<4.0",
  "prometheus-client>=0.21,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "pypdf>=5.1,<6.0",
  "python-docx>=1.1,<2.0",
  "python-multipart>=0.0.20,<1.0",
  "python-pptx>=1.0,<2.0",
  "redis>=5.2,<6.0",
  "rq>=2.1,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "tenacity>=9.0,<10.0",
  "tiktoken>=0.8,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
