[project]
name = "mohkam-rag-retrieval"
version = "0.1.0"
description = "Embedding and reranking service for the Mohkam RAG stack"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "FlagEmbedding>=1.3.4,<2.0",
  "prometheus-client>=0.21,<1.0",
  "orjson>=3.10,<4.0",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
